--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,50 @@
 <view class="main">
     <!-- 公共头部 -->
     <MyTitle></MyTitle>
+    <!-- 导航栏 -->
+    <view class="nav_wrap">
+        <scroll-view class="nav" scroll-x="{{true}}">
+            <view class="nav_item {{index===currentIndexNav?'active':''}}" wx:for="{{navList}}" wx:key="id" bind:tap="activenav" data-index="{{index}}">
+                {{item.text}}
+            </view>
+        </scroll-view>
+    </view>
+    <!-- 轮播图 -->
+    <view class="slides">
+        <swiper autoplay="{{true}}" indicator-dots="{{true}}" circular="{{true}}">
+            <!-- 自动播放,小圆点,自动循环 -->
+            <swiper-item wx:for="{{swiperList}}" wx:key="index">
+                <image mode="widthFix" src="{{item.imgSrc}}" />
+            </swiper-item>
+        </swiper>
+    </view>
+    <!-- 视频列表 -->
+    <view class="video_wrap">
+        <navigator url="../detail/detail?id={{item.id}}" class="video_item" wx:for="{{videosList}}" wx:key="index">
+            <!-- 图片容器 -->
+            <view class="video_img">
+                <!-- 图片 -->
+                <image mode="widthFix" src="{{item.imgSrc}}" />
+                <!-- 播放量等 -->
+                <view class="video_info">
+                    <!-- 播放量 -->
+                    <view class="play_count_wrap">
+                        <!-- 图标 -->
+                        <i class="iconfont .icon-bofang:before"></i>
+                        <!-- 数值 -->
+                        <text class="play_count">{{item.playCount}}</text>
+                    </view>
+                    <!-- 评论量 -->
+                    <view class="comment_count_row">
+                        <!-- 图标 -->
+                        <i class="iconfont .icon-pinglun:before"></i>
+                        <!-- 数值 -->
+                        <text class="comment_count">{{item.commentCount}}</text>
+                    </view>
+                </view>
+            </view>
+            <!-- 标题 -->
+            <view class="video_title">{{item.desc}}</view>
+        </navigator>
+    </view>
 </view>
